<resources>
    <string name="app_name">cnct</string>
    <string name="setup_error">Your device could not generate proper security credentials. It is unsafe to proceed.</string>
    <string name="setup_permission">Permissions were denied</string>
    <string name="setup_success">You\'re all set</string>
    <string name="setup_network">Could not connect to the servers at this time.\nPlease try again later.</string>
    <string name="setup_retry">Retry</string>
    <string name="welcome_tagline">Social <b>Networking</b></string>
    <string name="welcome_username">Username</string>
    <string name="welcome_email">Email</string>
    <string name="welcome_password">Password</string>
    <string name="welcome_submit">Create Account</string>
    <string name="welcome_sign_in">Or sign in if you have an account</string>
    <string name="welcome_creating_account">Creating...</string>
    <string name="welcome_could_not_create_account">Could not create account</string>
    <string name="sign_in_title">Sign In</string>
    <string name="sign_in_submit">Submit</string>
    <string name="sign_in_email">Email</string>
    <string name="sign_in_cancel">Cancel</string>
    <string name="sign_in_processing">Signing In...</string>
    <string name="sign_in_failed">Wrong email/password</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="save">Save</string>
    <string name="connected">Connected</string>
    <string name="empty"></string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="main_networks">Networks</string>
    <string name="main_connections">Connections</string>
    <string name="main_my_networks">Mine</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_profile_email">Email</string>
    <string name="edit_profile_username">Username</string>
    <string name="edit_profile_password">Password</string>
    <string name="edit_profile_current_password">Current Password</string>
    <string name="edit_profile_new_password">New Password</string>
    <string name="edit_profile_profile">PROFILE</string>
    <string name="edit_profile_failure">Could not edit profile. Try again.</string>
    <string name="add_network">Add Network</string>
    <string name="add_network_requires_authorization">Requires authorization</string>
    <string name="add_network_password">Password</string>
    <string name="add_network_distance">Reach</string>
    <string name="add_network_creating">Creating network...</string>
    <string name="add_network_error">Could not create network</string>
    <string-array name="add_network_distance_array">
        <item>Friends</item>
        <item>Friends &amp; Friends of Friends</item>
    </string-array>
    <string name="requires_authorization">Requires Authorization</string>
</resources>
