<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:errorEnabled="false">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/create_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_network_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/create_require_authorization"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/add_network_requires_authorization" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/add_network_distance"
        android:textAllCaps="true"
        android:textColor="@color/dark_gray"
        android:textStyle="bold" />

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/create_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>