<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_chips">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:alpha="0"
        app:errorEnabled="false"
        style="@style/AppTheme.SignIn.TextInputLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/email_edit_text"
            android:hint="@string/sign_in_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textEmailAddress"
            style="@style/AppTheme.Welcome.EditText" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0"
        app:errorEnabled="false"
        app:passwordToggleEnabled="true"
        style="@style/AppTheme.SignIn.TextInputLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/password_edit_text"
            android:hint="@string/welcome_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            style="@style/AppTheme.SignIn.EditText" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_submit"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:alpha="0"/>

</LinearLayout>