<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cant">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="@color/dark_blue">

            <com.ryanfung.cnct.views.UserIconView
                android:id="@+id/edit_profile_user_icon_view"
                android:transitionName="edit_profile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/edit_profile_success_view"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:visibility="gone"
                app:lottie_fileName="setup_success.json" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/edit_profile_loading_view"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:visibility="gone"
                app:lottie_loop="true"
                app:lottie_fileName="setup_loading.json" />

        </FrameLayout>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile_profile"
            style='@style/AppTheme.EditProfile.Header' />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_profile_username_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:theme="@style/AppTheme.EditProfile.TextInputLayout"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_profile_username_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_profile_username"
                android:inputType="text"
                style="@style/AppTheme.EditProfile.EditText"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_profile_email_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:theme="@style/AppTheme.EditProfile.TextInputLayout"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_profile_email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_profile_email"
                android:inputType="text|textEmailAddress"
                style="@style/AppTheme.EditProfile.EditText"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile_password"
            style='@style/AppTheme.EditProfile.Header' />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_profile_current_password_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.EditProfile.TextInputLayout"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_profile_current_password_edit_text"
                android:hint="@string/edit_profile_current_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                style="@style/AppTheme.EditProfile.EditText" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_profile_password_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:theme="@style/AppTheme.EditProfile.TextInputLayout"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_profile_password_edit_text"
                android:hint="@string/edit_profile_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                style="@style/AppTheme.EditProfile.EditText" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
</ScrollView>